--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,7 +19,7 @@ $dark:                            #444 !default;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
-@import "www/lib/ionic/scss/ionic";
+@import "../www/lib/ionic/scss/ionic";
 
 $light:                           #fff !default;
 $stable:                          #f8f8f8 !default;
