--- a/www/views/login/loginIn.html
+++ b/www/views/login/loginIn.html
@@ -1,162 +1,171 @@
 <!DOCTYPE html>
 <ion-view view-title="">
-  <ion-content>
+    <ion-content>
 
 
-<!--
-    <ion-slide-box on-slide-changed="slideHasChanged($index)" class="hide-on-keyboard-open">
-      <ion-slide><div class="box">
-        <img src="img/login/screen01.gif" width="100%">
+        <!--
+            <ion-slide-box on-slide-changed="slideHasChanged($index)" class="hide-on-keyboard-open">
+              <ion-slide><div class="box">
+                <img src="img/login/screen01.gif" width="100%">
+                <h2 style="
+                          position: absolute;
+                          bottom:0;
+                          color: white;
+                          text-align: right;
+                          width: 100%;
+                      " translate>for Better<br>for Dust</h2>
+              </div></ion-slide>
+              <ion-slide><div class="box"><img src="img/login/screen02.jpg" width="100%">
+                <h2 style="
+                          position: absolute;
+                          bottom:0;
+                          color: white;
+                          text-align: right;
+                          width: 100%;
+                      " translate>for Better<br>for Dust</h2>
+              </div>
+              </ion-slide>
+              <ion-slide><div class="box"><img src="img/login/screen03.gif" width="100%"></div></ion-slide>
+            </ion-slide-box>
+
+            // hide-on-keyboard-open ?
+          -->
+        <div class="box" style="position: relative;height: 100%;text-align: center;">
+            <img src="img/login/screen01.gif" style="width:100%; max-width:500px;">
+        </div>
         <h2 style="
-                  position: absolute;
-                  bottom:0;
-                  color: white;
-                  text-align: right;
-                  width: 100%;
-              " translate>for Better<br>for Dust</h2>
-      </div></ion-slide>
-      <ion-slide><div class="box"><img src="img/login/screen02.jpg" width="100%">
-        <h2 style="
-                  position: absolute;
-                  bottom:0;
-                  color: white;
-                  text-align: right;
-                  width: 100%;
-              " translate>for Better<br>for Dust</h2>
-      </div>
-      </ion-slide>
-      <ion-slide><div class="box"><img src="img/login/screen03.gif" width="100%"></div></ion-slide>
-    </ion-slide-box>
-  -->
-  <div class="box hide-on-keyboard-open" style="position: relative;height: 100%;text-align: center;">
-    <img src="img/login/screen01.gif" style="width:100%; max-width:500px;">
-  </div>
-  <h2 style="
             text-align: center;
             width: 100%;
             font-family: cleanator;
         " translate>for Better for Dust</h2>
 
-<article class="container">
+        <article class="container">
 
-  <div class="row responsive-md" >
-    <div class="col">&nbsp;</div>
-    <div class="col">
+            <div class="row responsive-md">
+                <div class="col">&nbsp;</div>
+                <div class="col">
 
 
-      <div class="list">
-        <!--<div class="item item-image">
-          <img src="img/login_1.gif">
-          <h3>{{'LoginWelcome'|translate}}</h3>
-        </div>-->
+                    <div class="list">
+                        <!--<div class="item item-image">
+                          <img src="img/login_1.gif">
+                          <h3>{{'LoginWelcome'|translate}}</h3>
+                        </div>-->
 
-        <form name="loginForm" ng-submit="loginSubmit(userLoginEmail,userLoginPassword,loginForm.$valid)" class="form-inline col-xs-12 col-sm-8 col-sm-offset-2" role="form" novalidate>
-          <div class="form-group col-xs-12"  ng-class="{ 'has-error' : loginForm.email.$invalid && !loginForm.email.$pristine }">
+                        <form name="loginForm"
+                              ng-submit="loginSubmit(userLoginEmail,userLoginPassword,loginForm.$valid)"
+                              class="form-inline col-xs-12 col-sm-8 col-sm-offset-2" role="form" novalidate>
+                            <div class="form-group col-xs-12"
+                                 ng-class="{ 'has-error' : loginForm.email.$invalid && !loginForm.email.$pristine }">
 
-            <label class="item item-input item-stacked-label">
-              <input placeholder="{{'01valid.email@required.com'|translate}}" name="email" type="email"
-                  ng-model="userLoginEmail" required
-                  pattern=".{1,}@[_a-z0-9A-Z]+(\.[a-z0-9A-Z]+)+">
+                                <label class="item item-input item-stacked-label">
+                                    <input placeholder="{{'01valid.email@required.com'|translate}}" name="email"
+                                           type="email"
+                                           ng-model="userLoginEmail" required
+                                           pattern=".{1,}@[_a-z0-9A-Z]+(\.[a-z0-9A-Z]+)+">
+                                </label>
+
+
+                                <label class="item item-input item-stacked-label">
+                                    <input name="password" type="password"
+                                           placeholder="{{'LoginNewPassword'|translate}}"
+                                           ng-model="userLoginPassword" required>
+                                </label>
+
+
+                                <label class="item item-input item-select">
+                                    <div class="input-label">
+                                        {{'LoginLanguage'|translate}}
+                                    </div>
+                                    <select ng-model="navigLang" class="form-control input-lg"
+                                            ng-options="style.title for style in navigLangs"
+                                            ng-change="navChangeLang(navigLang.code); navGAClick('langChange_'+navigLang.title);"></select>
+
+
+                                </label>
+                            </div>
+
+
+                            <div class="form-group col-xs-12" style="margin-top:20px;">
+                                <button type="submit"
+                                        class="col-xs-12 button button-full button-positive btn btn-lg btn-primary"
+                                        ng-disabled="!userLoginEmail || !userLoginPassword"
+                                        ng-click="navGAClick('login_'+userLoginEmail)">{{'LoginSignin'|translate}}
+                                </button>
+                            </div>
+
+                            <br><br><span style="float:right;font-size:10px;"><span app-version></span></span>
+
+
+                        </form>
+                    </div>
+                </div>
+                <div class="col">&nbsp;</div>
+            </div>
+
+        </article>
+        <!--
+        <footer>
+          <nav class="navbar navbar-default navbar-fixed-bottom row" role="navigation" style="min-height: 0;">
+            <div class="col-xs-12">
+              <ul class="nav row">
+                <li class="col-xs-3" style="padding:0; text-align:center">&nbsp;</li>
+                <li class="col-xs-6" style="padding:0; text-align:center">
+                  &nbsp;
+
+                </li>
+                <li class="col-xs-3" style="padding:0; text-align:center">
+                  <a data-toggle="modal" data-target="#helpModal">
+                    <i class="glyphicon glyphicon-question-sign"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </footer>
+        -->
+
+        <!--
+          <div class="list">
+            <label class="item item-input">
+              <span class="input-label">Username</span>
+              <input type="text" ng-model="user.username">
             </label>
-
-
-            <label class="item item-input item-stacked-label">
-              <input name="password" type="password" placeholder="{{'LoginNewPassword'|translate}}"
-                  ng-model="userLoginPassword" required>
-            </label>
-
-
-            <label class="item item-input item-select">
-              <div class="input-label">
-                {{'LoginLanguage'|translate}}
-              </div>
-              <select ng-model="navigLang" class="form-control input-lg"
-                      ng-options="style.title for style in navigLangs"
-                      ng-change="navChangeLang(navigLang.code); navGAClick('langChange_'+navigLang.title);"></select>
-
-
+            <label class="item item-input">
+              <span class="input-label">Password</span>
+              <input type="password" ng-model="user.password">
             </label>
           </div>
-
-
-          <div class="form-group col-xs-12" style="margin-top:20px;">
-            <button type="submit" class="col-xs-12 button button-full button-positive btn btn-lg btn-primary"
-                ng-disabled="!userLoginEmail || !userLoginPassword"
-                ng-click="navGAClick('login_'+userLoginEmail)">{{'LoginSignin'|translate}}</button>
+          <div class="padding">
+            <button class="button button-block button-positive" ng-click="signIn(user)">
+              Sign-In
+            </button>
+            <p class="text-center">
+              <a href="#/forgot-password">Forgot password</a>
+            </p>
           </div>
+        -->
 
-          <br><br><span style="float:right;font-size:10px;"><span app-version></span></span>
+        <!--
 
+            <script id="templates/forgot-password.html" type="text/ng-template">
+              <ion-view view-title="Forgot Password">
+                <ion-content padding="true">
+                  <p>
+                    Yeah this is just a demo showing how views can be shown without tabs, then you can navigate
+                    to views within tabs. Additionally, only one set of tabs needs to be written for all of the different views that should go inside the tabs. (Compared to written the same tab links in the footer of every view that's in a tab.)
+                  </p>
+                  <p>
+                    There's no username/password, just click
+                    the Sign-In button back a the sign-in view.
+                  </p>
+                  <p>
+                    Return to <a href="#/sign-in">Sign-In</a>.
+                  </p>
+                </ion-content>
+              </ion-view>
+            </script>
 
-        </form>
-      </div>
-    </div>
-    <div class="col">&nbsp;</div>
-  </div>
-
-</article>
-<!--
-<footer>
-  <nav class="navbar navbar-default navbar-fixed-bottom row" role="navigation" style="min-height: 0;">
-    <div class="col-xs-12">
-      <ul class="nav row">
-        <li class="col-xs-3" style="padding:0; text-align:center">&nbsp;</li>
-        <li class="col-xs-6" style="padding:0; text-align:center">
-          &nbsp;
-
-        </li>
-        <li class="col-xs-3" style="padding:0; text-align:center">
-          <a data-toggle="modal" data-target="#helpModal">
-            <i class="glyphicon glyphicon-question-sign"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</footer>
--->
-
-<!--
-  <div class="list">
-    <label class="item item-input">
-      <span class="input-label">Username</span>
-      <input type="text" ng-model="user.username">
-    </label>
-    <label class="item item-input">
-      <span class="input-label">Password</span>
-      <input type="password" ng-model="user.password">
-    </label>
-  </div>
-  <div class="padding">
-    <button class="button button-block button-positive" ng-click="signIn(user)">
-      Sign-In
-    </button>
-    <p class="text-center">
-      <a href="#/forgot-password">Forgot password</a>
-    </p>
-  </div>
--->
-
-<!--
-
-    <script id="templates/forgot-password.html" type="text/ng-template">
-      <ion-view view-title="Forgot Password">
-        <ion-content padding="true">
-          <p>
-            Yeah this is just a demo showing how views can be shown without tabs, then you can navigate
-            to views within tabs. Additionally, only one set of tabs needs to be written for all of the different views that should go inside the tabs. (Compared to written the same tab links in the footer of every view that's in a tab.)
-          </p>
-          <p>
-            There's no username/password, just click
-            the Sign-In button back a the sign-in view.
-          </p>
-          <p>
-            Return to <a href="#/sign-in">Sign-In</a>.
-          </p>
-        </ion-content>
-      </ion-view>
-    </script>
-
--->
-</ion-content>
+        -->
+    </ion-content>
 </ion-view>
