--- a/www/views/user/userCalendar.html
+++ b/www/views/user/userCalendar.html
@@ -19,32 +19,44 @@
              </ion-item>
           </ion-list>
 
-            <button class="button button-block button-clear">
+            <!--<button class="button button-block button-clear">
               <h3 translate>It's time to carry on</h3>
-            </button>
-            <p style="text-align:right" ng-if="navAppInitLevel() > 1">
-              <span translate>TimeAverageAvailable</span> <b>{{userIndicators.indicUsersTimeAvailabity}} <span translate>min / day.</span></b><br>
-              <span translate>Feasibility</span>{{userIndicators.indicChoresFeasibility}}
-              <span class="badge badge-assertive" ng-show="userIndicators.indicChoresFeasibility < 0.4" translate>NotGood</span>
-              <span class="badge badge-energized" ng-show="userIndicators.indicChoresFeasibility >= 0.4 && userIndicators.indicChoresFeasibility < 0.7" translate>NotBad</span>
-              <span class="badge badge-balanced" ng-show="userIndicators.indicChoresFeasibility >= 0.7" translate>Good</span>
-            </p>
+            </button>-->
 
-            <ul class="list card" ng-if="navAppInitLevel() <= 1">
-              <li class="item card item-icon-left">
-                <i class="icon ion-help"></i>
-                <p translate>GUIDER_WorldwideStats</p>
-              </li>
-            </ul>
+            <div class="list card" >
+
+              <div class="item item-avatar" ng-click="toggleStats = !toggleStats">
+                <img src="img/icone_coeur.jpg" />
+                <h2 ng-if="navAppInitLevel() <= 1" translate>Did you know ?</h2>
+                <p ng-if="navAppInitLevel() <= 1" translate>WorldWideStats</p>
+
+                <span class="badge badge-assertive" ng-show="userIndicators.indicChoresFeasibility < 0.4" translate>NotGood</span>
+                <span class="badge badge-energized" ng-show="userIndicators.indicChoresFeasibility >= 0.4 && userIndicators.indicChoresFeasibility < 0.7" translate>NotBad</span>
+                <span class="badge badge-balanced" ng-show="userIndicators.indicChoresFeasibility >= 0.7" translate>Good</span>
+
+              </div>
+
+              <div class="item item-body" ng-show="toggleStats">
+                <p ng-if="navAppInitLevel() <= 1" translate>GUIDER_WorldwideStats Do you that the average of time dedicated to home chore is 200 hours by week ?</p>
+                <p ng-if="navAppInitLevel() > 1">
+                  <span translate>TimeAverageAvailable</span>
+                  <span>{{userIndicators.indicUsersTimeAvailabity}}</span>
+                  <span translate>min / day.</span>
+                  <span translate>Feasibility</span>
+                  <span>{{userIndicators.indicChoresFeasibility}}</span>
+                </p>
+              </div>
+            </div>
 
 
-            <!-- user A -->
+
+          <!-- user A -->
             <ul class="list">
-              <li class="item item-avatar item-button-right">
+              <li class="item item-avatar item-button-right" ng-click="toggleUserA = !toggleUserA">
                 <img ng-src="{{profil[userA[userCols.profilID]].img}}">
                 {{userA[userCols.firstName]}}
                 <p>{{Math.round(userA[userCols.timeInMnPerWeekTodo] / 7)}} <span translate>minutes in average dedicated per day</span></p>
-                <button class="button button-clear" ng-click="toggleUserA = !toggleUserA">
+                <button class="button button-clear">
                   <i class="icon ion-ios-arrow-right" ng-hide="toggleUserA"></i>
                   <i class="icon ion-ios-arrow-down" ng-show="toggleUserA"></i>
                 </button>
@@ -90,11 +102,11 @@
 
             <!-- user B -->
             <ul class="list">
-              <li class="item item-avatar item-button-right">
+              <li class="item item-avatar item-button-right" ng-click="toggleUserB = !toggleUserB">
                 <img ng-src="{{profil[userB[userCols.profilID]].img}}">
                 {{userB[userCols.firstName]}}
                 <p>{{Math.round(userB[userCols.timeInMnPerWeekTodo] / 7)}} <span translate>minutes in average dedicated per day</span></p>
-                <button class="button button-clear" ng-click="toggleUserB = !toggleUserB">
+                <button class="button button-clear" >
                   <i class="icon ion-ios-arrow-right" ng-hide="toggleUserB"></i>
                   <i class="icon ion-ios-arrow-down" ng-show="toggleUserB"></i>
                 </button>
@@ -138,11 +150,13 @@
             </ul>
 
 
+              <!--
               <div class="item item-button" ng-if="navAppInitLevel() <= 1">
                         <a class="button button-block icon-right ion-chevron-right button-assertive"
                          ng-href="#/config/category" ng-click="navSetAppInitLevel(2);" translate>Footer_What</a>
 
               </div>
+              -->
             </ul>
 
             <div class="row" ><div class="col">&nbsp;</div></div>
