--- a/www/views/user/userAll.html
+++ b/www/views/user/userAll.html
@@ -16,7 +16,7 @@
                 <ion-item class="item item-icon-left item-dark" ng-repeat="msg in navErrMsgs track by $index">
                     <ion-delete-button class="ion-close-round"
                                        ng-click="navErrMsgs.splice($index,1)"></ion-delete-button>
-                    <strong translate>Warning!</strong> {{msg}}
+                    <span style="white-space: normal">{{msg}}</span>
                 </ion-item>
             </ion-list>
 
@@ -41,7 +41,7 @@
                                         <img class="full-image" ng-src="{{profil[userA[userCols.profilID]].img}}">
                                     </div>
                                     <div class="item range range-positive">
-                                        <input type="range" min="0" max="{{profil.length - 1}}"
+                                        <input type="range" min="0" max="{{profil.length - 1}}" style="margin:0"
                                                ng-model="userA[userCols.profilID]">
                                     </div>
                                 </div>
@@ -55,7 +55,7 @@
                                         <img class="full-image" ng-src="{{profil[userB[userCols.profilID]].img}}">
                                     </div>
                                     <div class="item range range-assertive">
-                                        <input type="range" min="0" max="{{profil.length - 1}}"
+                                        <input type="range" min="0" max="{{profil.length - 1}}" style="margin:0"
                                                ng-model="userB[userCols.profilID]">
                                     </div>
                                 </div>
