--- a/www/views/user/userAll.html
+++ b/www/views/user/userAll.html
@@ -21,11 +21,10 @@
             </ion-list>
 
 
-
             <div class="row responsive-md">
 
                 <div class="row responsive-md">
-                    <div class="col">&nbsp;</div>
+                    <div class="col hidden-xs">&nbsp;</div>
                     <div class="col col-50">
 
                         <form novalidate>
@@ -96,9 +95,9 @@
                         </form>
                         <!--  <div class="row"><button class="button button-clear">&nbsp;</button><button class="button button-clear">&nbsp;</button></div> -->
                     </div>
-                    <div class="col">&nbsp;</div>
+                    <div class="col hidden-xs">&nbsp;</div>
                 </div>
-
+            </div>
 
         </article>
 
