--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,11 +1,11 @@
 /* Empty. Add your own CSS if you like */
 
 @font-face {
-  font-family: "Cleanator";
-  src: url("../font/uppereastside/UpperEastSide.ttf?v=2.0.1") format("truetype");
-  font-weight: normal;
-  font-style: normal; }
-
+    font-family: "Cleanator";
+    src: url("../font/uppereastside/UpperEastSide.ttf?v=2.0.1") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
 
 /*.title.title-center
  .bar.bar-header {
@@ -16,25 +16,26 @@
 
 .nav-bar-title {
 
-  font-size : 2.2em !important;
-  color:rgb(131, 131, 131);
+    font-size: 2.2em !important;
+    color: rgb(131, 131, 131);
 }
 
 .bar .title,
 .bar .title a {
-  font-family: "Cleanator";
-  font-size : 1.5em !important;
+    font-family: "Cleanator";
+    font-size: 1.5em !important;
 }
 
 .tabs > a {
-  font-family: "Cleanator";
-  font-size : 1.7em !important;
-  font-weight: bold;
+    font-family: "Cleanator";
+    font-size: 1.7em !important;
+    font-weight: bold;
 }
 
 .bar-dark-light {
-  background-color: #5A5757 !important;
+    background-color: #5A5757 !important;
 }
+
 /*
 .back-family {
   background-image: url("../img/background/family.jpg");
@@ -57,8 +58,8 @@
   fill: #444;
 }*/
 
-.small{
-  font-size:0.7em;
+.small {
+    font-size: 0.7em;
 }
 
 /*
@@ -149,17 +150,24 @@
 }
 */
 .chat-item.selected {
-  animation: fadeInDown 2s;
-  -webkit-animation: fadeInDown 2s;
+    animation: fadeInDown 2s;
+    -webkit-animation: fadeInDown 2s;
 }
-  /*
+
+/*
 .chat-item.selected .chat-content {
 
-  border: 3px solid gray;
+border: 3px solid gray;
 
-  border-radius: 100%;
-  -moz-border-radius: 100%;
-  -webkit-border-radius: 100%;
-  	border-width: 3px;
-    margin-top : -30px;
+border-radius: 100%;
+-moz-border-radius: 100%;
+-webkit-border-radius: 100%;
+    border-width: 3px;
+  margin-top : -30px;
 }*/
+
+@media (max-width: 767px) {
+    .hidden-xs {
+        display: none;
+    }
+}
