--- a/www/views/chore/choreDetail.html
+++ b/www/views/chore/choreDetail.html
@@ -2,45 +2,46 @@
 
 <ion-view>
 
-  <ion-nav-buttons side="left">
+    <ion-nav-buttons side="left">
         <a class="button button-icon  icon ion-arrow-left-b"
-        ng-click="choreSaveDetail();"
-        ng-href="#/config/category"
-        ng-show="choreToEdit[choreCols.name]"
-        translate></a>
+           ng-click="choreSaveDetail();"
+           ng-href="#/config/category"
+           ng-show="choreToEdit[choreCols.name]"
+           translate></a>
         <!-- ng-href="#/config/categorychores/{{choreToEdit[choreCols.category]}}" -->
-  </ion-nav-buttons>
-  <ion-nav-buttons side="right">
+    </ion-nav-buttons>
+    <ion-nav-buttons side="right">
         <button class="button button-outline button-assertive" disabled>
-          {{choreToEdit[choreCols.category]}}
+            {{choreToEdit[choreCols.category]}}
         </button>
-  </ion-nav-buttons>
-<!--
+    </ion-nav-buttons>
+    <!--
 
-<ion-nav-buttons side="right">
-        <button class="button clear" style="margin-left:20px;" disabled>
-          <img src="{{getChoreCategoryThumbPath(choreToEdit[choreCols.category])}}"class="img-circle" height="30px" />
-        </button>
-  </ion-nav-buttons>  -->
-  <ion-content class="has-footer">
+    <ion-nav-buttons side="right">
+            <button class="button clear" style="margin-left:20px;" disabled>
+              <img src="{{getChoreCategoryThumbPath(choreToEdit[choreCols.category])}}"class="img-circle" height="30px" />
+            </button>
+      </ion-nav-buttons>  -->
+    <ion-content class="has-footer">
 
 
-      <article class="container">
-      <!--  <div class="row">
+        <article class="container">
+            <!--  <div class="row">
 
-          <h3>My chore {{choreId}}</h3>
-          <p>{{choreToEdit}}</p>
-        </div>
--->
+                <h3>My chore {{choreId}}</h3>
+                <p>{{choreToEdit}}</p>
+              </div>
+      -->
 
 
             <form class="" name="choreModalChoreForm">
 
-                  <ul class="list">
+                <ul class="list">
 
                     <li class="item item-input">
-                      <label class="input-label" translate>ChoreName</label>
-                      <input type="text" ng-model="choreToEdit[choreCols.name]" placeholder="{{'ChoreName'|translate}}" required>
+                        <label class="input-label" translate>ChoreName</label>
+                        <input type="text" ng-model="choreToEdit[choreCols.name]"
+                               placeholder="{{'ChoreName'|translate}}" required>
                     </li>
                     <!--
                     <label class="item item-input item-input item-select">
@@ -49,61 +50,62 @@
                     </label>
                     -->
                     <li class="item item-toggle">
-                       {{'ChorePriority'|translate}}
+                        {{'ChorePriority'|translate}}
                         <!--
                        <span style="color:red;font-style: italic;padding-left: 20px;" ng-show="choreToEdit && (choreToEdit[choreCols.priority] == 1)"><i class="icon ion-star"></i></span>
                        -->
-                       <label class="toggle toggle-assertive">
-                         <input type="checkbox" ng-model="choreToEdit[choreCols.priority]">
-                         <div class="track">
-                           <div class="handle"></div>
-                         </div>
-                       </label>
+                        <label class="toggle toggle-assertive">
+                            <input type="checkbox" ng-model="choreToEdit[choreCols.priority]">
+                            <div class="track">
+                                <div class="handle"></div>
+                            </div>
+                        </label>
                     </li>
                     <li class="item item-input">
-                      <label class="input-label" translate>ChoreDescription</label>
-                      <textarea ng-model="choreToEdit[choreCols.description]" rows="5" placeholder="{{'ChoreDescription'|translate}}" ></textarea>
+                        <label class="input-label" translate>ChoreDescription</label>
+                        <textarea ng-model="choreToEdit[choreCols.description]" rows="5"
+                                  placeholder="{{'ChoreDescription'|translate}}"></textarea>
                     </li>
 
                     <li class="item range range-assertive">
-                      <label class="input-label">
-                        <span translate>ChoreEstimate</span><br>
-                        <small>{{choreToEdit[choreCols.timeInMn]}} <span translate>mn</span></small>
-                      </label>
-                      <input type="range" min="1" max="120" ng-model="choreToEdit[choreCols.timeInMn]">
-                      <i class="icon ion-clock"></i>
+                        <label class="input-label">
+                            <span translate>ChoreEstimate</span><br>
+                            <small>{{choreToEdit[choreCols.timeInMn]}} <span translate>mn</span></small>
+                        </label>
+                        <input type="range" min="1" max="120" ng-model="choreToEdit[choreCols.timeInMn]">
+                        <i class="icon ion-clock"></i>
                     </li>
                     <li class="item range range-assertive">
-                      <label class="input-label">
-                        <span translate>ChoreFrequency</span><br>
-                        <small><span translate>each</span> {{choreToEdit[choreCols.frequencyDays]}} <span translate>day(s)</span></small>
-                      </label>
-                      <input type="range" min="1" max="60" ng-model="choreToEdit[choreCols.frequencyDays]">
-                      <i class="icon ion-stats-bars"></i>
+                        <label class="input-label">
+                            <span translate>ChoreFrequency</span><br>
+                            <small><span translate>each</span> {{choreToEdit[choreCols.frequencyDays]}} <span translate>day(s)</span>
+                            </small>
+                        </label>
+                        <input type="range" min="1" max="60" ng-model="choreToEdit[choreCols.frequencyDays]">
+                        <i class="icon ion-stats-bars"></i>
                     </li>
-
 
 
                     <li class="item item-avatar" style="border-bottom:0;">
-                      <img ng-src="{{profil[userA[userCols.profilID]].img}}">
-                      {{userA[userCols.firstName]}}
-                      <p translate>affinity for this item</p>
+                        <img ng-src="{{profil[userA[userCols.profilID]].img}}">
+                        {{userA[userCols.firstName]}}
+                        <p translate>affinity for this item</p>
                     </li>
                     <li class="item range range-assertive" style="border-top:0;">
-                      <label class="input-label">&nbsp;</label>
-                      <input type="range" min="0" max="100" ng-model="choreToEdit[choreCols.AUserAffinity]">
-                      <i class="icon ion-happy-outline"></i>
+                        <label class="input-label">&nbsp;</label>
+                        <input type="range" min="0" max="100" ng-model="choreToEdit[choreCols.AUserAffinity]">
+                        <i class="icon ion-happy-outline"></i>
                     </li>
 
                     <li class="item item-avatar" style="border-bottom:0;">
-                      <img ng-src="{{profil[userB[userCols.profilID]].img}}">
-                      {{userB[userCols.firstName]}}
-                      <p translate>affinity for this item</p>
+                        <img ng-src="{{profil[userB[userCols.profilID]].img}}">
+                        {{userB[userCols.firstName]}}
+                        <p translate>affinity for this item</p>
                     </li>
                     <li class="item range range-assertive" style="border-top:0;">
-                      <label class="input-label">&nbsp;</label>
-                      <input type="range" min="0" max="100" ng-model="choreToEdit[choreCols.BUserAffinity]">
-                      <i class="icon ion-happy-outline"></i>
+                        <label class="input-label">&nbsp;</label>
+                        <input type="range" min="0" max="100" ng-model="choreToEdit[choreCols.BUserAffinity]">
+                        <i class="icon ion-happy-outline"></i>
                     </li>
 
                 </ul>
@@ -111,7 +113,7 @@
             </form>
 
 
-      </article>
+        </article>
 
-  </ion-content>
+    </ion-content>
 </ion-view>
