--- a/www/views/user/userCalendar.html
+++ b/www/views/user/userCalendar.html
@@ -30,7 +30,7 @@
                     <img src="img/icone_coeur.jpg"/>
                     <!--<h2 ng-if="navAppInitLevel() <= 1" translate>CalendarDidYouKnow?</h2>
                     <p ng-if="navAppInitLevel() <= 1" translate>CalendarWorldWideStats</p>-->
-                    <h3 ng-if="navAppInitLevel() <= 1">
+                    <h3 ng-show="navAppInitLevel() <= 1">
                         {{userIndicators.indicUsersTimeAvailabity}}
                         <span translate>min VS</span>
                         {{userIndicators.indicChoresTimeRequired}}
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="item item-body" ng-show="toggleStats">
-                    <p ng-if="navAppInitLevel() <= 1" translate>GUIDER_CalendarWorldwideStats : Do you know that the
+                    <p ng-show="navAppInitLevel() <= 1" translate>GUIDER_CalendarWorldwideStats : Do you know that the
                         average of time
                         dedicated to home chore is 200 hours by week ?</p>
                     <p>
