--- a/www/views/login/loginIn.html
+++ b/www/views/login/loginIn.html
@@ -1,35 +1,6 @@
 <!DOCTYPE html>
 <ion-view view-title="">
     <ion-content>
-
-
-        <!--
-            <ion-slide-box on-slide-changed="slideHasChanged($index)" class="hide-on-keyboard-open">
-              <ion-slide><div class="box">
-                <img src="img/login/screen01.gif" width="100%">
-                <h2 style="
-                          position: absolute;
-                          bottom:0;
-                          color: white;
-                          text-align: right;
-                          width: 100%;
-                      " translate>for Better<br>for Dust</h2>
-              </div></ion-slide>
-              <ion-slide><div class="box"><img src="img/login/screen02.jpg" width="100%">
-                <h2 style="
-                          position: absolute;
-                          bottom:0;
-                          color: white;
-                          text-align: right;
-                          width: 100%;
-                      " translate>for Better<br>for Dust</h2>
-              </div>
-              </ion-slide>
-              <ion-slide><div class="box"><img src="img/login/screen03.gif" width="100%"></div></ion-slide>
-            </ion-slide-box>
-
-            // hide-on-keyboard-open ?
-          -->
         <div class="box" style="position: relative;height: 100%;text-align: center;">
             <img src="img/login/screen01.gif" style="width:100%; max-width:500px;">
         </div>
@@ -42,9 +13,8 @@
         <article class="container">
 
             <div class="row responsive-md">
-                <div class="col">&nbsp;</div>
+                <div class="col hidden-xs">&nbsp;</div>
                 <div class="col">
-
 
                     <div class="list">
                         <!--<div class="item item-image">
@@ -100,7 +70,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="col">&nbsp;</div>
+                <div class="col hidden-xs">&nbsp;</div>
             </div>
 
         </article>
